--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.version>0.1</project.version>
+        <risk.version>1.8</risk.version>
+    </properties>
+
+
 </project>
