--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,20 @@
     </properties>
 
 
+    <dependencies>
+        <!-- okhttp-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
+        <!-- zhuansun-base Utils 会使用 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5</version>
+        </dependency>
+    </dependencies>
+
 </project>
